Work on storyplanning and test latency problems

--- a/docs/Tunnel Planning/.obsidian/app.json
+++ b/docs/Tunnel Planning/.obsidian/app.json
@@ -4,5 +4,6 @@
   "spellcheck": false,
   "autoPairBrackets": false,
   "autoPairMarkdown": false,
-  "smartIndentList": true
+  "smartIndentList": true,
+  "alwaysUpdateLinks": true
 }
